--- a/jenkinsfile
+++ b/jenkinsfile
@@ -32,6 +32,7 @@ pipeline {
                 } 
                 failure {
                         echo 'It is failed'
+                        //sample
                 }
                
             }
