--- a/jenkinsfile
+++ b/jenkinsfile
@@ -26,7 +26,7 @@ pipeline {
                 sh "mvn test"
                 
             }
-            post{
+            /*post{
                 success{
                         junit 'target/surefire-reports/*.xml'
                 } 
@@ -35,7 +35,7 @@ pipeline {
                         //sample
                 }
                
-            }
+            }*/
         }
         stage('package') {
             agent {label 'linux_slave_new'}
